@@ -22,17 +22,17 @@
  */
 package com.oracle.truffle.espresso.classfile;
 
-import static com.oracle.truffle.espresso.EspressoOptions.SpecCompliancyMode.STRICT;
+import static com.oracle.truffle.espresso.EspressoOptions.SpecComplianceMode.STRICT;
 import static com.oracle.truffle.espresso.classfile.Constants.ACC_ABSTRACT;
 import static com.oracle.truffle.espresso.classfile.Constants.ACC_ANNOTATION;
 import static com.oracle.truffle.espresso.classfile.Constants.ACC_CALLER_SENSITIVE;
 import static com.oracle.truffle.espresso.classfile.Constants.ACC_ENUM;
 import static com.oracle.truffle.espresso.classfile.Constants.ACC_FINAL;
 import static com.oracle.truffle.espresso.classfile.Constants.ACC_FINALIZER;
-import static com.oracle.truffle.espresso.classfile.Constants.ACC_INNER_CLASS;
+import static com.oracle.truffle.espresso.classfile.Constants.ACC_FORCE_INLINE;
+import static com.oracle.truffle.espresso.classfile.Constants.ACC_HIDDEN;
 import static com.oracle.truffle.espresso.classfile.Constants.ACC_INTERFACE;
 import static com.oracle.truffle.espresso.classfile.Constants.ACC_LAMBDA_FORM_COMPILED;
-import static com.oracle.truffle.espresso.classfile.Constants.ACC_LAMBDA_FORM_HIDDEN;
 import static com.oracle.truffle.espresso.classfile.Constants.ACC_MODULE;
 import static com.oracle.truffle.espresso.classfile.Constants.ACC_NATIVE;
 import static com.oracle.truffle.espresso.classfile.Constants.ACC_PRIVATE;
@@ -45,25 +45,18 @@ import static com.oracle.truffle.espresso.classfile.Constants.ACC_SYNCHRONIZED;
 import static com.oracle.truffle.espresso.classfile.Constants.ACC_SYNTHETIC;
 import static com.oracle.truffle.espresso.classfile.Constants.ACC_VARARGS;
 import static com.oracle.truffle.espresso.classfile.Constants.ACC_VOLATILE;
-import static com.oracle.truffle.espresso.classfile.Constants.APPEND_FRAME_BOUND;
-import static com.oracle.truffle.espresso.classfile.Constants.CHOP_BOUND;
-import static com.oracle.truffle.espresso.classfile.Constants.FULL_FRAME;
-import static com.oracle.truffle.espresso.classfile.Constants.ITEM_InitObject;
-import static com.oracle.truffle.espresso.classfile.Constants.ITEM_NewObject;
-import static com.oracle.truffle.espresso.classfile.Constants.ITEM_Object;
 import static com.oracle.truffle.espresso.classfile.Constants.JVM_RECOGNIZED_CLASS_MODIFIERS;
 import static com.oracle.truffle.espresso.classfile.Constants.JVM_RECOGNIZED_METHOD_MODIFIERS;
-import static com.oracle.truffle.espresso.classfile.Constants.SAME_FRAME_BOUND;
-import static com.oracle.truffle.espresso.classfile.Constants.SAME_FRAME_EXTENDED;
-import static com.oracle.truffle.espresso.classfile.Constants.SAME_LOCALS_1_STACK_ITEM_BOUND;
-import static com.oracle.truffle.espresso.classfile.Constants.SAME_LOCALS_1_STACK_ITEM_EXTENDED;
 
 import java.io.IOException;
 import java.lang.reflect.Modifier;
+import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.Objects;
+import java.util.Set;
 
-import com.oracle.truffle.espresso.EspressoLanguage;
+import org.graalvm.collections.EconomicMap;
+
 import com.oracle.truffle.espresso.classfile.ConstantPool.Tag;
 import com.oracle.truffle.espresso.classfile.attributes.BootstrapMethodsAttribute;
 import com.oracle.truffle.espresso.classfile.attributes.CodeAttribute;
@@ -77,6 +70,8 @@ import com.oracle.truffle.espresso.classfile.attributes.LocalVariableTable;
 import com.oracle.truffle.espresso.classfile.attributes.MethodParametersAttribute;
 import com.oracle.truffle.espresso.classfile.attributes.NestHostAttribute;
 import com.oracle.truffle.espresso.classfile.attributes.NestMembersAttribute;
+import com.oracle.truffle.espresso.classfile.attributes.PermittedSubclassesAttribute;
+import com.oracle.truffle.espresso.classfile.attributes.RecordAttribute;
 import com.oracle.truffle.espresso.classfile.attributes.SignatureAttribute;
 import com.oracle.truffle.espresso.classfile.attributes.SourceDebugExtensionAttribute;
 import com.oracle.truffle.espresso.classfile.attributes.SourceFileAttribute;
@@ -89,7 +84,8 @@ import com.oracle.truffle.espresso.descriptors.Symbol.Name;
 import com.oracle.truffle.espresso.descriptors.Symbol.Signature;
 import com.oracle.truffle.espresso.descriptors.Symbol.Type;
 import com.oracle.truffle.espresso.descriptors.Types;
-import com.oracle.truffle.espresso.impl.Klass;
+import com.oracle.truffle.espresso.impl.ClassLoadingEnv;
+import com.oracle.truffle.espresso.impl.ClassRegistry;
 import com.oracle.truffle.espresso.impl.ParserField;
 import com.oracle.truffle.espresso.impl.ParserKlass;
 import com.oracle.truffle.espresso.impl.ParserMethod;
@@ -104,7 +100,7 @@ import com.oracle.truffle.espresso.runtime.ClasspathFile;
 import com.oracle.truffle.espresso.runtime.EspressoContext;
 import com.oracle.truffle.espresso.runtime.EspressoException;
 import com.oracle.truffle.espresso.runtime.StaticObject;
-import com.oracle.truffle.espresso.substitutions.Host;
+import com.oracle.truffle.espresso.verifier.MethodVerifier;
 
 @SuppressWarnings("try")
 public final class ClassfileParser {
@@ -159,51 +155,43 @@ public final class ClassfileParser {
     public static final char JAVA_MIN_SUPPORTED_VERSION = JAVA_1_1_VERSION;
     public static final char JAVA_MAX_SUPPORTED_VERSION = JAVA_11_VERSION;
     public static final char JAVA_MAX_SUPPORTED_MINOR_VERSION = 0;
+    public static final char JAVA_PREVIEW_MINOR_VERSION = 65535;
 
     private final ClasspathFile classfile;
 
-    private final String requestedClassType;
+    private final Symbol<Type> requestedClassType;
 
-    private final EspressoContext context;
+    private final ClassLoadingEnv env;
 
     private final ClassfileStream stream;
 
-    private final StaticObject[] constantPoolPatches;
+    private final ClassRegistry.ClassDefinitionInfo classDefinitionInfo;
 
     private Symbol<Type> classType;
-    private Symbol<Type> classOuterClassType;
 
-    private int minorVersion;
-    private int majorVersion;
+    private int minorVersion = -1;
+    private int majorVersion = -1;
     private int classFlags;
 
     private int maxBootstrapMethodAttrIndex = -1;
     private Tag badConstantSeen;
 
+    boolean verifiable;
+
     private ConstantPool pool;
 
-    @SuppressWarnings("unused")
-    public Klass getHostClass() {
-        return hostClass;
-    }
-
-    /**
-     * The host class for an anonymous class.
-     */
-    private final Klass hostClass;
-
-    private ClassfileParser(ClassfileStream stream, String requestedClassType, Klass hostClass, EspressoContext context, StaticObject[] constantPoolPatches) {
+    private ClassfileParser(ClassLoadingEnv env, ClassfileStream stream, boolean verifiable, Symbol<Type> requestedClassType, ClassRegistry.ClassDefinitionInfo info) {
         this.requestedClassType = requestedClassType;
-        this.hostClass = hostClass;
-        this.context = context;
+        this.env = env;
         this.classfile = null;
         this.stream = Objects.requireNonNull(stream);
-        this.constantPoolPatches = constantPoolPatches;
+        this.verifiable = verifiable;
+        this.classDefinitionInfo = info;
     }
 
     // Note: only used for reading the class name from class bytes
-    private ClassfileParser(ClassfileStream stream, EspressoContext context) {
-        this(stream, "", null, context, null);
+    private ClassfileParser(ClassLoadingEnv env, ClassfileStream stream) {
+        this(env, stream, false, null, ClassRegistry.ClassDefinitionInfo.EMPTY);
     }
 
     void handleBadConstant(Tag tag, ClassfileStream s) {
@@ -211,10 +199,10 @@ public final class ClassfileParser {
             if (majorVersion >= JAVA_9_VERSION) {
                 s.readU2();
                 badConstantSeen = tag;
-                throw stream.classFormatError("Illegal constant tag for a class file: %d. Should appear only in module info files.", tag.getValue());
             }
+        } else {
+            throw stream.classFormatError("Unknown constant tag %d", tag.getValue());
         }
-        throw stream.classFormatError("Unknown constant tag %d", tag.getValue());
     }
 
     void updateMaxBootstrapMethodAttrIndex(int bsmAttrIndex) {
@@ -225,31 +213,36 @@ public final class ClassfileParser {
 
     void checkInvokeDynamicSupport(Tag tag) {
         if (majorVersion < INVOKEDYNAMIC_MAJOR_VERSION) {
-            stream.classFormatError("Class file version does not support constant tag %d", tag.getValue());
+            throw stream.classFormatError("Class file version does not support constant tag %d", tag.getValue());
         }
     }
 
     void checkDynamicConstantSupport(Tag tag) {
         if (majorVersion < DYNAMICCONSTANT_MAJOR_VERSION) {
-            stream.classFormatError("Class file version does not support constant tag %d", tag.getValue());
+            throw stream.classFormatError("Class file version does not support constant tag %d", tag.getValue());
         }
     }
 
-    public static ParserKlass parse(ClassfileStream stream, String requestedClassName, Klass hostClass, EspressoContext context) {
-        return parse(stream, requestedClassName, hostClass, context, null);
+    public static ParserKlass parse(ClassLoadingEnv env, ClassfileStream stream, StaticObject loader, Symbol<Type> requestedClassName) {
+        boolean verifiable = MethodVerifier.needsVerify(env.getLanguage(), loader);
+        return parse(env, stream, verifiable, requestedClassName, ClassRegistry.ClassDefinitionInfo.EMPTY);
     }
 
-    public static ParserKlass parse(ClassfileStream stream, String requestedClassName, Klass hostClass, EspressoContext context, @Host(Object[].class) StaticObject[] constantPoolPatches) {
-        return new ClassfileParser(stream, requestedClassName, hostClass, context, constantPoolPatches).parseClass();
+    public static ParserKlass parse(ClassLoadingEnv env, ClassfileStream stream, boolean verifiable, Symbol<Type> requestedClassName) {
+        return parse(env, stream, verifiable, requestedClassName, ClassRegistry.ClassDefinitionInfo.EMPTY);
+    }
+
+    public static ParserKlass parse(ClassLoadingEnv env, ClassfileStream stream, boolean verifiable, Symbol<Type> requestedClassType, ClassRegistry.ClassDefinitionInfo info) {
+        return new ClassfileParser(env, stream, verifiable, requestedClassType, info).parseClass();
     }
 
     private ParserKlass parseClass() {
-        try (DebugCloseable parse = KLASS_PARSE.scope(context.getTimers())) {
+        try (DebugCloseable parse = KLASS_PARSE.scope(env.getTimers())) {
             return parseClassImpl();
         } catch (EspressoException e) {
             throw e;
         } catch (Throwable e) {
-            context.getLogger().severe("Unexpected host exception " + e + " thrown during class parsing.");
+            env.getLogger().severe("Unexpected host exception " + e + " thrown during class parsing.");
             throw e;
         }
     }
@@ -263,15 +256,17 @@ public final class ClassfileParser {
 
     /**
      * Verifies that the class file version is supported.
-     * 
+     *
      * @param major the major version number
      * @param minor the minor version number
      */
     private void verifyVersion(int major, int minor) {
-        if (context.getJavaVersion().java8OrEarlier()) {
-            versionCheck8(context.getJavaVersion().classFileVersion(), major, minor);
+        if (env.getJavaVersion().java8OrEarlier()) {
+            versionCheck8OrEarlier(env.getJavaVersion().classFileVersion(), major, minor);
+        } else if (env.getJavaVersion().java11OrEarlier()) {
+            versionCheck11OrEarlier(env.getJavaVersion().classFileVersion(), major, minor);
         } else {
-            versionCheck11(context.getJavaVersion().classFileVersion(), major, minor);
+            versionCheck12OrLater(env.getJavaVersion().classFileVersion(), major, minor);
         }
     }
 
@@ -281,12 +276,14 @@ public final class ClassfileParser {
      * <li>Major_version >= 45 and major_version <= current_major_version, any minor version.
      * <li>Major_version = current_major_version and minor_version <= MAX_SUPPORTED_MINOR (= 0).
      */
-    private static void versionCheck8(int maxMajor, int major, int minor) {
-        if (major < JAVA_MIN_SUPPORTED_VERSION ||
-                        major > maxMajor ||
-                        (major == maxMajor && minor > JAVA_MAX_SUPPORTED_MINOR_VERSION)) {
-            throw unsupportedClassVersionError("Unsupported major.minor version " + major + "." + minor);
+    private static void versionCheck8OrEarlier(int maxMajor, int major, int minor) {
+        if (major == maxMajor && minor <= JAVA_MAX_SUPPORTED_MINOR_VERSION) {
+            return;
         }
+        if (major >= JAVA_MIN_SUPPORTED_VERSION && major < maxMajor) {
+            return;
+        }
+        throw unsupportedClassVersionError("Unsupported major.minor version " + major + "." + minor);
     }
 
     /**
@@ -297,17 +294,44 @@ public final class ClassfileParser {
      * <li>Major_version = current_major_version and minor_version = 65535 and --enable-preview is
      * present.
      */
-    private static void versionCheck11(int maxMajor, int major, int minor) {
-        if (major < JAVA_MIN_SUPPORTED_VERSION ||
-                        major > maxMajor ||
-                        major != JAVA_1_1_VERSION && minor != 0 ||
-                        (major == maxMajor) && (minor > JAVA_MAX_SUPPORTED_MINOR_VERSION)) {
-            throw unsupportedClassVersionError("Unsupported major.minor version " + major + "." + minor);
+    private static void versionCheck11OrEarlier(int maxMajor, int major, int minor) {
+        if (major == maxMajor && (minor <= JAVA_MAX_SUPPORTED_MINOR_VERSION || minor == JAVA_PREVIEW_MINOR_VERSION)) {
+            return;
         }
+        if (major < maxMajor && major > JAVA_MIN_SUPPORTED_VERSION && minor == 0) {
+            return;
+        }
+        if (major == JAVA_MIN_SUPPORTED_VERSION) {
+            return;
+        }
+        throw unsupportedClassVersionError("Unsupported major.minor version " + major + "." + minor);
+    }
+
+    /**
+     * Hotspot comment (17): A legal major_version.minor_version must be one of the following:
+     *
+     * <li>Major_version >= 45 and major_version < 56, any minor_version.
+     * <li>Major_version >= 56 and major_version <= JVM_CLASSFILE_MAJOR_VERSION and minor_version =
+     * 0.
+     * <li>Major_version = JVM_CLASSFILE_MAJOR_VERSION and minor_version = 65535 and
+     * --enable-preview is present.
+     *
+     */
+    private static void versionCheck12OrLater(int maxMajor, int major, int minor) {
+        if (major >= JAVA_12_VERSION && major <= maxMajor && minor == 0) {
+            return;
+        }
+        if (major >= JAVA_MIN_SUPPORTED_VERSION && major < JAVA_12_VERSION) {
+            return;
+        }
+        if (major == maxMajor && minor == JAVA_PREVIEW_MINOR_VERSION) {
+            return;
+        }
+        throw unsupportedClassVersionError("Unsupported major.minor version " + major + "." + minor);
     }
 
     private static EspressoException unsupportedClassVersionError(String message) {
-        Meta meta = EspressoLanguage.getCurrentContext().getMeta();
+        Meta meta = EspressoContext.get(null).getMeta();
         throw meta.throwExceptionWithMessage(meta.java_lang_UnsupportedClassVersionError, message);
     }
 
@@ -334,6 +358,10 @@ public final class ClassfileParser {
         }
     }
 
+    boolean hasSeenBadConstant() {
+        return badConstantSeen != null;
+    }
+
     private ParserKlass parseClassImpl() {
         readMagic();
 
@@ -341,12 +369,8 @@ public final class ClassfileParser {
         majorVersion = stream.readU2();
         verifyVersion(majorVersion, minorVersion);
 
-        try (DebugCloseable closeable = CONSTANT_POOL.scope(context.getTimers())) {
-            if (constantPoolPatches == null) {
-                this.pool = ConstantPool.parse(context.getLanguage(), stream, this, majorVersion, minorVersion);
-            } else {
-                this.pool = ConstantPool.parse(context.getLanguage(), stream, this, constantPoolPatches, context, majorVersion, minorVersion);
-            }
+        try (DebugCloseable closeable = CONSTANT_POOL.scope(env.getTimers())) {
+            this.pool = ConstantPool.parse(env, stream, this, classDefinitionInfo.patches, majorVersion, minorVersion);
         }
 
         // JVM_ACC_MODULE is defined in JDK-9 and later.
@@ -366,7 +390,7 @@ public final class ClassfileParser {
             throw ConstantPool.noClassDefFoundError(classType + " is not a class because access_flag ACC_MODULE is set");
         }
 
-        if (badConstantSeen != null) {
+        if (hasSeenBadConstant()) {
             // Do not throw CFE until after the access_flags are checked because if
             // ACC_MODULE is set in the access flags, then NCDFE must be thrown, not CFE.
             // https://bugs.openjdk.java.net/browse/JDK-8175383
@@ -384,7 +408,7 @@ public final class ClassfileParser {
 
         // TODO(peterssen): Verify class names.
 
-        Symbol<Type> thisKlassType = context.getTypes().fromName(thisKlassName);
+        Symbol<Type> thisKlassType = env.getTypes().fromName(thisKlassName);
         if (Types.isPrimitive(thisKlassType) || Types.isArray(thisKlassType)) {
             throw ConstantPool.classFormatError(".this_class cannot be array nor primitive " + classType);
         }
@@ -393,7 +417,7 @@ public final class ClassfileParser {
         classType = thisKlassType;
 
         // Checks if name in class file matches requested name
-        if (requestedClassType != null && !requestedClassType.equals(classType.toString())) {
+        if (requestedClassType != null && !classDefinitionInfo.isHidden() && !requestedClassType.equals(classType)) {
             throw ConstantPool.noClassDefFoundError(classType + " (wrong name: " + requestedClassType + ")");
         }
 
@@ -408,30 +432,39 @@ public final class ClassfileParser {
         }
 
         Symbol<Type>[] superInterfaces;
-        try (DebugCloseable closeable = PARSE_INTERFACES.scope(context.getTimers())) {
+        try (DebugCloseable closeable = PARSE_INTERFACES.scope(env.getTimers())) {
             superInterfaces = parseInterfaces();
         }
         final ParserField[] fields;
-        try (DebugCloseable closeable = PARSE_FIELD.scope(context.getTimers())) {
+        try (DebugCloseable closeable = PARSE_FIELD.scope(env.getTimers())) {
             fields = parseFields(isInterface);
         }
         final ParserMethod[] methods;
-        try (DebugCloseable closeable = PARSE_METHODS.scope(context.getTimers())) {
+        try (DebugCloseable closeable = PARSE_METHODS.scope(env.getTimers())) {
             methods = parseMethods(isInterface);
         }
         final Attribute[] attributes;
-        try (DebugCloseable closeable = PARSE_CLASSATTR.scope(context.getTimers())) {
+        try (DebugCloseable closeable = PARSE_CLASSATTR.scope(env.getTimers())) {
             attributes = parseClassAttributes();
         }
 
         // Ensure there are no trailing bytes
         stream.checkEndOfFile();
 
-        return new ParserKlass(pool, classFlags, thisKlassName, thisKlassType, superKlass, superInterfaces, methods, fields, attributes, thisKlassIndex);
+        if (classDefinitionInfo.isHidden()) {
+            assert requestedClassType != null;
+            long futureKlassID = env.getNewKlassId();
+            classDefinitionInfo.initKlassID(futureKlassID);
+            thisKlassName = env.getNames().getOrCreate(Types.hiddenClassName(requestedClassType, futureKlassID));
+            thisKlassType = env.getTypes().fromName(thisKlassName);
+            pool = pool.patchForHiddenClass(thisKlassIndex, thisKlassName);
+        }
+
+        return new ParserKlass(pool, classDefinitionInfo.patchFlags(classFlags), thisKlassName, thisKlassType, superKlass, superInterfaces, methods, fields, attributes, thisKlassIndex);
     }
 
-    public static Symbol<Symbol.Name> getClassName(byte[] bytes, EspressoContext context) {
-        return new ClassfileParser(new ClassfileStream(bytes, null), context).getClassName();
+    public static Symbol<Symbol.Name> getClassName(ClassLoadingEnv env, byte[] bytes) {
+        return new ClassfileParser(env, new ClassfileStream(bytes, null)).getClassName();
     }
 
     private Symbol<Symbol.Name> getClassName() {
@@ -442,12 +475,8 @@ public final class ClassfileParser {
         majorVersion = stream.readU2();
         verifyVersion(majorVersion, minorVersion);
 
-        try (DebugCloseable closeable = CONSTANT_POOL.scope(context.getTimers())) {
-            if (constantPoolPatches == null) {
-                this.pool = ConstantPool.parse(context.getLanguage(), stream, this, majorVersion, minorVersion);
-            } else {
-                this.pool = ConstantPool.parse(context.getLanguage(), stream, this, constantPoolPatches, context, majorVersion, minorVersion);
-            }
+        try (DebugCloseable closeable = CONSTANT_POOL.scope(env.getTimers())) {
+            this.pool = ConstantPool.parse(env, stream, this, classDefinitionInfo.patches, majorVersion, minorVersion);
         }
 
         // JVM_ACC_MODULE is defined in JDK-9 and later.
@@ -475,11 +504,11 @@ public final class ClassfileParser {
         final HashSet<MethodKey> dup = new HashSet<>(methodCount);
         for (int i = 0; i < methodCount; ++i) {
             ParserMethod method;
-            try (DebugCloseable closeable = PARSE_SINGLE_METHOD.scope(context.getTimers())) {
+            try (DebugCloseable closeable = PARSE_SINGLE_METHOD.scope(env.getTimers())) {
                 method = parseMethod(isInterface);
             }
             methods[i] = method;
-            try (DebugCloseable closeable = NO_DUP_CHECK.scope(context.getTimers())) {
+            try (DebugCloseable closeable = NO_DUP_CHECK.scope(env.getTimers())) {
                 if (!dup.add(new MethodKey(method))) {
                     throw ConstantPool.classFormatError("Duplicate method name and signature: " + method.getName() + " " + method.getSignature());
                 }
@@ -584,12 +613,15 @@ public final class ClassfileParser {
                     RUNTIME_VISIBLE_TYPE_ANNOTATIONS | RUNTIME_INVISIBLE_TYPE_ANNOTATIONS | ANNOTATION_DEFAULT | SIGNATURE;
     private static final int fieldAnnotations = RUNTIME_VISIBLE_ANNOTATIONS | RUNTIME_INVISIBLE_ANNOTATIONS | RUNTIME_VISIBLE_TYPE_ANNOTATIONS | RUNTIME_INVISIBLE_TYPE_ANNOTATIONS | SIGNATURE;
     private static final int codeAnnotations = RUNTIME_VISIBLE_TYPE_ANNOTATIONS | RUNTIME_INVISIBLE_TYPE_ANNOTATIONS | SIGNATURE;
+    private static final int recordAnnotations = RUNTIME_VISIBLE_ANNOTATIONS | RUNTIME_INVISIBLE_ANNOTATIONS |
+                    RUNTIME_VISIBLE_TYPE_ANNOTATIONS | RUNTIME_INVISIBLE_TYPE_ANNOTATIONS | SIGNATURE;
 
     public enum InfoType {
         Class(classAnnotations),
         Method(methodAnnotations),
         Field(fieldAnnotations),
-        Code(codeAnnotations);
+        Code(codeAnnotations),
+        Record(recordAnnotations);
 
         final int annotations;
 
@@ -656,8 +688,11 @@ public final class ClassfileParser {
                 }
                 return annotationDefault = new Attribute(attributeName, stream.readByteArray(attributeSize));
             } else if (infoType.supports(SIGNATURE) && attributeName.equals(Name.Signature)) {
-                if (context.getJavaVersion().java9OrLater() && signature != null) {
+                if (env.getJavaVersion().java9OrLater() && signature != null) {
                     throw ConstantPool.classFormatError("Duplicate AnnotationDefault attribute");
+                }
+                if (attributeSize != 2) {
+                    throw ConstantPool.classFormatError("Invalid attribute_length value for signature attribute: " + attributeSize + " != 2");
                 }
                 return signature = parseSignatureAttribute(attributeName);
             }
@@ -678,9 +713,9 @@ public final class ClassfileParser {
         boolean isClinit = false;
         boolean isInit = false;
 
-        try (DebugCloseable closeable = METHOD_INIT.scope(context.getTimers())) {
+        try (DebugCloseable closeable = METHOD_INIT.scope(env.getTimers())) {
 
-            try (DebugCloseable nameCheck = NAME_CHECK.scope(context.getTimers())) {
+            try (DebugCloseable nameCheck = NAME_CHECK.scope(env.getTimers())) {
                 pool.utf8At(nameIndex).validateMethodName(true);
                 name = pool.symbolAt(nameIndex, "method name");
 
@@ -694,7 +729,7 @@ public final class ClassfileParser {
                         methodFlags = ACC_STATIC;
                     } else if ((methodFlags & ACC_STATIC) == ACC_STATIC) {
                         methodFlags &= (ACC_STRICT | ACC_STATIC);
-                    } else if (context.getJavaVersion().java9OrLater()) {
+                    } else if (env.getJavaVersion().java9OrLater()) {
                         throw ConstantPool.classFormatError("Method <clinit> is not static.");
                     }
                     // extraFlags = INITIALIZER | methodFlags;
@@ -722,7 +757,7 @@ public final class ClassfileParser {
              * In a class file whose version number is 51.0 or above, the method has its ACC_STATIC
              * flag set and takes no arguments (4.6).
              */
-            try (DebugCloseable signatureCheck = SIGNATURE_CHECK.scope(context.getTimers())) {
+            try (DebugCloseable signatureCheck = SIGNATURE_CHECK.scope(env.getTimers())) {
                 // Checks for void method if init or clinit.
                 /*
                  * Obtain slot number for the signature. Forces a validation, but better in startup
@@ -749,7 +784,7 @@ public final class ClassfileParser {
                 }
             }
             attributeCount = stream.readU2();
-            methodAttributes = new Attribute[attributeCount];
+            methodAttributes = spawnAttributesArray(attributeCount);
         }
 
         CodeAttribute codeAttribute = null;
@@ -769,7 +804,7 @@ public final class ClassfileParser {
                 if (codeAttribute != null) {
                     throw ConstantPool.classFormatError("Duplicate Code attribute");
                 }
-                try (DebugCloseable code = CODE_PARSE.scope(context.getTimers())) {
+                try (DebugCloseable code = CODE_PARSE.scope(env.getTimers())) {
                     methodAttributes[i] = codeAttribute = parseCodeAttribute(attributeName);
                 }
             } else if (attributeName.equals(Name.Exceptions)) {
@@ -796,11 +831,15 @@ public final class ClassfileParser {
                         Symbol<Type> annotType = constant.value();
                         if (Type.java_lang_invoke_LambdaForm$Compiled.equals(annotType)) {
                             methodFlags |= ACC_LAMBDA_FORM_COMPILED;
-                        } else if (Type.java_lang_invoke_LambdaForm$Hidden.equals(annotType)) {
-                            methodFlags |= ACC_LAMBDA_FORM_HIDDEN;
+                        } else if (Type.java_lang_invoke_LambdaForm$Hidden.equals(annotType) ||
+                                        Type.jdk_internal_vm_annotation_Hidden.equals(annotType)) {
+                            methodFlags |= ACC_HIDDEN;
                         } else if (Type.sun_reflect_CallerSensitive.equals(annotType) ||
                                         Type.jdk_internal_reflect_CallerSensitive.equals(annotType)) {
                             methodFlags |= ACC_CALLER_SENSITIVE;
+                        } else if (Type.java_lang_invoke_ForceInline.equals(annotType) ||
+                                        Type.jdk_internal_vm_annotation_ForceInline.equals(annotType)) {
+                            methodFlags |= ACC_FORCE_INLINE;
                         }
                     }
                     methodAttributes[i] = runtimeVisibleAnnotations = new Attribute(attributeName, data);
@@ -837,7 +876,15 @@ public final class ClassfileParser {
             }
         }
 
+        if (classDefinitionInfo.isHidden()) {
+            methodFlags |= ACC_HIDDEN;
+        }
+
         return ParserMethod.create(methodFlags, name, signature, methodAttributes);
+    }
+
+    private static Attribute[] spawnAttributesArray(int attributeCount) {
+        return attributeCount == 0 ? Attribute.EMPTY_ARRAY : new Attribute[attributeCount];
     }
 
     private static int parseAnnotation(ClassfileStream subStream) {
@@ -902,10 +949,12 @@ public final class ClassfileParser {
         EnclosingMethodAttribute enclosingMethod = null;
         BootstrapMethodsAttribute bootstrapMethods = null;
         InnerClassesAttribute innerClasses = null;
+        PermittedSubclassesAttribute permittedSubclasses = null;
+        RecordAttribute record = null;
 
         CommonAttributeParser commonAttributeParser = new CommonAttributeParser(InfoType.Class);
 
-        final Attribute[] classAttributes = new Attribute[attributeCount];
+        final Attribute[] classAttributes = spawnAttributesArray(attributeCount);
         for (int i = 0; i < attributeCount; i++) {
             final int attributeNameIndex = stream.readU2();
             final Symbol<Name> attributeName = pool.symbolAt(attributeNameIndex, "attribute name");
@@ -959,6 +1008,16 @@ public final class ClassfileParser {
                         throw ConstantPool.classFormatError("Classfile cannot have both a nest members and a nest host attribute.");
                     }
                     classAttributes[i] = nestMembers = parseNestMembers(attributeName);
+                } else if (majorVersion >= JAVA_14_VERSION && attributeName.equals(Name.Record)) {
+                    if (record != null) {
+                        throw ConstantPool.classFormatError("Duplicate Record attribute");
+                    }
+                    classAttributes[i] = record = parseRecord(attributeName);
+                } else if (majorVersion >= JAVA_17_VERSION && attributeName.equals(Name.PermittedSubclasses)) {
+                    if (permittedSubclasses != null) {
+                        throw ConstantPool.classFormatError("Duplicate PermittedSubclasses attribute");
+                    }
+                    classAttributes[i] = permittedSubclasses = parsePermittedSubclasses(attributeName);
                 } else {
                     Attribute attr = commonAttributeParser.parseCommonAttribute(attributeName, attributeSize);
                     // stream.skip(attributeSize);
@@ -1007,29 +1066,32 @@ public final class ClassfileParser {
         if (entryCount == 0) {
             return LineNumberTableAttribute.EMPTY;
         }
-        LineNumberTableAttribute.Entry[] entries = new LineNumberTableAttribute.Entry[entryCount];
+        char[] entries = new char[entryCount << 1];
         for (int i = 0; i < entryCount; i++) {
-            int bci = stream.readU2();
-            int lineNumber = stream.readU2();
-            entries[i] = new LineNumberTableAttribute.Entry(bci, lineNumber);
+            int idx = i << 1;
+            char bci = (char) stream.readU2();
+            char lineNumber = (char) stream.readU2();
+            entries[idx] = bci;
+            entries[idx + 1] = lineNumber;
         }
         return new LineNumberTableAttribute(name, entries);
     }
 
-    private LocalVariableTable parseLocalVariableAttribute(Symbol<Name> name) {
+    private LocalVariableTable parseLocalVariableAttribute(Symbol<Name> name, int codeLength, int maxLocals) {
         assert Name.LocalVariableTable.equals(name);
-        return parseLocalVariableTable(name);
+        return parseLocalVariableTable(name, codeLength, maxLocals);
     }
 
-    private LocalVariableTable parseLocalVariableTypeAttribute(Symbol<Name> name) {
+    private LocalVariableTable parseLocalVariableTypeAttribute(Symbol<Name> name, int codeLength, int maxLocals) {
         assert Name.LocalVariableTypeTable.equals(name);
-        return parseLocalVariableTable(name);
+        return parseLocalVariableTable(name, codeLength, maxLocals);
     }
 
-    private LocalVariableTable parseLocalVariableTable(Symbol<Name> name) {
+    private LocalVariableTable parseLocalVariableTable(Symbol<Name> name, int codeLength, int maxLocals) {
+        boolean isLVTT = Name.LocalVariableTypeTable.equals(name);
         int entryCount = stream.readU2();
         if (entryCount == 0) {
-            return LocalVariableTable.EMPTY;
+            return isLVTT ? LocalVariableTable.EMPTY_LVTT : LocalVariableTable.EMPTY_LVT;
         }
         Local[] locals = new Local[entryCount];
         for (int i = 0; i < entryCount; i++) {
@@ -1039,8 +1101,32 @@ public final class ClassfileParser {
             int descIndex = stream.readU2();
             int slot = stream.readU2();
 
+            if (bci < 0 || bci >= codeLength) {
+                throw ConstantPool.classFormatError("Invalid local variable table attribute entry: start_pc out of bounds: " + bci);
+            }
+            if (bci + length > codeLength) {
+                throw ConstantPool.classFormatError("Invalid local variable table attribute entry: start_pc + length out of bounds: " + (bci + length));
+            }
+
             Utf8Constant poolName = pool.utf8At(nameIndex);
             Utf8Constant typeName = pool.utf8At(descIndex);
+
+            typeName.validateUTF8();
+            poolName.validateFieldName();
+
+            int extraSlot = 0;
+            if (!isLVTT) {
+                typeName.validateType(false);
+                Symbol<Type> type = typeName.value();
+                if (type == Type._long || type == Type._double) {
+                    extraSlot = 1;
+                }
+            }
+
+            if (slot + extraSlot >= maxLocals) {
+                throw ConstantPool.classFormatError("Invalid local variable table attribute entry: index points to an invalid frame slot: " + slot);
+            }
+
             locals[i] = new Local(poolName, typeName, bci, bci + length, slot);
 
         }
@@ -1050,6 +1136,7 @@ public final class ClassfileParser {
     private SignatureAttribute parseSignatureAttribute(Symbol<Name> name) {
         assert Name.Signature.equals(name);
         int signatureIndex = stream.readU2();
+        pool.utf8At(signatureIndex).validateUTF8();
         return new SignatureAttribute(name, signatureIndex);
     }
 
@@ -1124,6 +1211,9 @@ public final class ClassfileParser {
     private InnerClassesAttribute parseInnerClasses(Symbol<Name> name) {
         assert Name.InnerClasses.equals(name);
         final int entryCount = stream.readU2();
+
+        boolean duplicateInnerClass = false;
+
         final InnerClassesAttribute.Entry[] innerClassInfos = new InnerClassesAttribute.Entry[entryCount];
         for (int i = 0; i < entryCount; ++i) {
             final InnerClassesAttribute.Entry innerClassInfo = parseInnerClassEntry();
@@ -1134,7 +1224,7 @@ public final class ClassfileParser {
              * HotSpot does not perform this check. Enforcing the spec here break some applications
              * in the wild e.g. Intellij IDEA.
              */
-            if (context.SpecCompliancyMode == STRICT) {
+            if (env.getLanguage().getSpecComplianceMode() == STRICT) {
                 if (majorVersion >= JAVA_7_VERSION && innerClassInfo.innerNameIndex == 0 && outerClassIndex != 0) {
                     throw ConstantPool.classFormatError("InnerClassesAttribute: the value of the outer_class_info_index item must be zero if the value of the inner_name_index item is zero.");
                 }
@@ -1144,6 +1234,11 @@ public final class ClassfileParser {
                 throw ConstantPool.classFormatError("Class is both outer and inner class");
             }
 
+            Symbol<Name> innerClassName = null;
+            if (innerClassIndex != 0) {
+                innerClassName = pool.classAt(innerClassIndex).getName(pool);
+            }
+
             for (int j = 0; j < i; ++j) {
                 // Inner class info is often small: better to use array lookup for startup.
                 final InnerClassesAttribute.Entry otherInnerClassInfo = innerClassInfos[j];
@@ -1151,35 +1246,81 @@ public final class ClassfileParser {
                     if (innerClassIndex == otherInnerClassInfo.innerClassIndex && outerClassIndex == otherInnerClassInfo.outerClassIndex) {
                         throw ConstantPool.classFormatError("Duplicate entry in InnerClasses attribute");
                     }
+                    if (innerClassIndex == otherInnerClassInfo.innerClassIndex ||
+                                    // The same class can be referenced by two different CP indices,
+                                    // compare by name instead.
+                                    (innerClassIndex != 0 &&
+                                                    otherInnerClassInfo.innerClassIndex != 0 &&
+                                                    innerClassName.equals(pool.classAt(otherInnerClassInfo.innerClassIndex).getName(pool)))) {
+                        duplicateInnerClass = true;
+                    }
                 }
-            }
-
-            // The JVM specification allows a null inner class but don't ask me what it means!
-            if (innerClassIndex == 0) {
-                continue;
-            }
-
-            // If no outer class is specified, then this entry denotes a local or anonymous class
-            // that will have an EnclosingMethod attribute instead. That is, these classes are
-            // not *immediately* enclosed by another class
-            if (outerClassIndex == 0) {
-                continue;
-            }
-
-            // If this entry refers to the current class, then the current class must be an inner
-            // class:
-            // it's enclosing class is recorded and it's flags are updated.
-            final Symbol<Type> innerClassType = context.getTypes().fromName(pool.classAt(innerClassIndex, "inner class descriptor").getName(pool));
-            if (innerClassType.equals(classType)) {
-                if (classOuterClassType != null) {
-                    throw ConstantPool.classFormatError("Duplicate outer class");
-                }
-                classFlags |= ACC_INNER_CLASS;
-                classOuterClassType = context.getTypes().fromName(pool.classAt(outerClassIndex).getName(pool));
             }
         }
-        return new InnerClassesAttribute(name, innerClassInfos);
 
+        if (duplicateInnerClass || hasCycles(innerClassInfos)) {
+            // Mimic HotSpot: Ignore the whole InnerClasses attribute and return an empty one.
+            final String cause = duplicateInnerClass
+                            ? "Duplicate inner_class_info_index (class names)"
+                            : "Cycle detected";
+            env.getLogger().warning(cause + " in InnerClassesAttribute, in class " + classType);
+            return new InnerClassesAttribute(name, new InnerClassesAttribute.Entry[0]);
+        }
+
+        return new InnerClassesAttribute(name, innerClassInfos);
+    }
+
+    int findInnerClassIndexEntry(InnerClassesAttribute.Entry[] entries, Symbol<Name> innerClassName) {
+        for (int i = 0; i < entries.length; i++) {
+            InnerClassesAttribute.Entry entry = entries[i];
+            if (entry.innerClassIndex == 0) {
+                continue;
+            }
+            // The same class can be referenced by two different CP indices, compare by name
+            // instead.
+            if (innerClassName == pool.classAt(entry.innerClassIndex).getName(pool)) {
+                return i;
+            }
+        }
+        return -1;
+    }
+
+    boolean hasCycles(InnerClassesAttribute.Entry[] entries) {
+        int curMark = 0;
+        int[] mark = new int[entries.length];
+        for (int i = 0; i < entries.length; i++) {
+            if (mark[i] != 0) { // already visited
+                continue;
+            }
+            mark[i] = ++curMark;
+            int v = entries[i].outerClassIndex;
+            while (true) {
+                if (v == 0) {
+                    break;
+                }
+                int index = findInnerClassIndexEntry(entries, pool.classAt(v).getName(pool));
+                if (index < 0) { // no edge found
+                    break;
+                }
+                if (mark[index] == curMark) { // cycle found
+                    return true;
+                }
+                if (mark[index] != 0) { // already visited
+                    break;
+                }
+                mark[index] = curMark;
+                v = entries[index].outerClassIndex;
+            }
+        }
+        return false;
+    }
+
+    private StackMapTableAttribute parseStackMapTableAttribute(Symbol<Name> attributeName, int attributeSize) {
+        if (verifiable) {
+            return new StackMapTableAttribute(attributeName, stream.readByteArray(attributeSize));
+        }
+        stream.skip(attributeSize);
+        return StackMapTableAttribute.EMPTY;
     }
 
     private NestHostAttribute parseNestHostAttribute(Symbol<Name> attributeName) {
@@ -1200,6 +1341,52 @@ public final class ClassfileParser {
         return new NestMembersAttribute(attributeName, classes);
     }
 
+    private PermittedSubclassesAttribute parsePermittedSubclasses(Symbol<Name> attributeName) {
+        assert PermittedSubclassesAttribute.NAME.equals(attributeName);
+        if ((classFlags & ACC_FINAL) != 0) {
+            throw ConstantPool.classFormatError("A final class may not declare a permitted subclasses attribute.");
+        }
+        int numberOfClasses = stream.readU2();
+        if (numberOfClasses == 0) {
+            return PermittedSubclassesAttribute.EMPTY;
+        }
+        char[] classes = new char[numberOfClasses];
+        for (int i = 0; i < numberOfClasses; i++) {
+            int pos = stream.readU2();
+            pool.classAt(pos).validate(pool);
+            classes[i] = (char) pos;
+        }
+        return new PermittedSubclassesAttribute(attributeName, classes);
+    }
+
+    private RecordAttribute parseRecord(Symbol<Name> recordAttributeName) {
+        assert RecordAttribute.NAME.equals(recordAttributeName);
+        int count = stream.readU2();
+        RecordAttribute.RecordComponentInfo[] components = new RecordAttribute.RecordComponentInfo[count];
+        for (int i = 0; i < count; i++) {
+            final int name = stream.readU2();
+            final int descriptor = stream.readU2();
+            pool.utf8At(name).validateUTF8();
+            pool.utf8At(descriptor).validateType(false);
+            Attribute[] componentAttributes = parseRecordComponentAttributes();
+            components[i] = new RecordAttribute.RecordComponentInfo(name, descriptor, componentAttributes);
+        }
+        return new RecordAttribute(recordAttributeName, components);
+    }
+
+    private Attribute[] parseRecordComponentAttributes() {
+        final int size = stream.readU2();
+        Attribute[] componentAttributes = new Attribute[size];
+        CommonAttributeParser commonAttributeParser = new CommonAttributeParser(InfoType.Record);
+        for (int j = 0; j < size; j++) {
+            final Symbol<Name> attributeName = pool.symbolAt(stream.readU2(), "attribute name");
+            final int attributeSize = stream.readS4();
+            Attribute attr = commonAttributeParser.parseCommonAttribute(attributeName, attributeSize);
+            componentAttributes[j] = attr == null ? new Attribute(attributeName, stream.readByteArray(attributeSize)) : attr;
+        }
+        return componentAttributes;
+    }
+
     private InnerClassesAttribute.Entry parseInnerClassEntry() {
         int innerClassIndex = stream.readU2();
         int outerClassIndex = stream.readU2();
@@ -1211,14 +1398,16 @@ public final class ClassfileParser {
             innerClassAccessFlags |= ACC_ABSTRACT;
         }
 
-        if (innerClassIndex != 0 || context.getJavaVersion().java9OrLater()) {
+        if (innerClassIndex != 0 || env.getJavaVersion().java9OrLater()) {
             pool.classAt(innerClassIndex).validate(pool);
         }
         if (outerClassIndex != 0) {
             pool.classAt(outerClassIndex).validate(pool);
         }
         if (innerNameIndex != 0) {
-            pool.utf8At(innerNameIndex).validateClassName();
+            // Gradle (the build tool) generates classes with innerNameIndex -> empty string.
+            // HotSpot does not validates the class name, only that it is a valid UTF-8 constant.
+            pool.utf8At(innerNameIndex).validate(pool); // .validateClassName();
         }
         return new InnerClassesAttribute.Entry(innerClassIndex, outerClassIndex, innerNameIndex, innerClassAccessFlags);
     }
@@ -1227,84 +1416,6 @@ public final class ClassfileParser {
         int classIndex = stream.readU2();
         int methodIndex = stream.readU2();
         return new EnclosingMethodAttribute(name, classIndex, methodIndex);
-    }
-
-    private StackMapFrame parseStackMapFrame() {
-        int frameType = stream.readU1();
-        if (frameType < SAME_FRAME_BOUND) {
-            return new SameFrame(frameType);
-        }
-        if (frameType < SAME_LOCALS_1_STACK_ITEM_BOUND) {
-            VerificationTypeInfo stackItem = parseVerificationTypeInfo();
-            return new SameLocals1StackItemFrame(frameType, stackItem);
-        }
-        if (frameType < SAME_LOCALS_1_STACK_ITEM_EXTENDED) {
-            // [128, 246] is reserved and still unused
-            throw ConstantPool.classFormatError("Encountered reserved StackMapFrame tag: " + frameType);
-        }
-        if (frameType == SAME_LOCALS_1_STACK_ITEM_EXTENDED) {
-            int offsetDelta = stream.readU2();
-            VerificationTypeInfo stackItem = parseVerificationTypeInfo();
-            return new SameLocals1StackItemFrameExtended(frameType, offsetDelta, stackItem);
-        }
-        if (frameType < CHOP_BOUND) {
-            int offsetDelta = stream.readU2();
-            return new ChopFrame(frameType, offsetDelta);
-        }
-        if (frameType == SAME_FRAME_EXTENDED) {
-            int offsetDelta = stream.readU2();
-            return new SameFrameExtended(frameType, offsetDelta);
-        }
-        if (frameType < APPEND_FRAME_BOUND) {
-            int offsetDelta = stream.readU2();
-            int appendLength = frameType - SAME_FRAME_EXTENDED;
-            VerificationTypeInfo[] locals = new VerificationTypeInfo[appendLength];
-            for (int i = 0; i < appendLength; i++) {
-                locals[i] = parseVerificationTypeInfo();
-            }
-            return new AppendFrame(frameType, offsetDelta, locals);
-        }
-        if (frameType == FULL_FRAME) {
-            int offsetDelta = stream.readU2();
-            int localsLength = stream.readU2();
-            VerificationTypeInfo[] locals = new VerificationTypeInfo[localsLength];
-            for (int i = 0; i < localsLength; i++) {
-                locals[i] = parseVerificationTypeInfo();
-            }
-            int stackLength = stream.readU2();
-            VerificationTypeInfo[] stack = new VerificationTypeInfo[stackLength];
-            for (int i = 0; i < stackLength; i++) {
-                stack[i] = parseVerificationTypeInfo();
-            }
-            return new FullFrame(frameType, offsetDelta, locals, stack);
-        }
-        throw ConstantPool.classFormatError("Unrecognized StackMapFrame tag: " + frameType);
-    }
-
-    private VerificationTypeInfo parseVerificationTypeInfo() {
-        int tag = stream.readU1();
-        if (tag < ITEM_InitObject) {
-            return PrimitiveTypeInfo.get(tag);
-        }
-        switch (tag) {
-            case ITEM_InitObject:
-                return UninitializedThis.get();
-            case ITEM_Object:
-                return new ReferenceVariable(stream.readU2());
-            case ITEM_NewObject:
-                return new UninitializedVariable(stream.readU2());
-            default:
-                throw ConstantPool.classFormatError("Unrecognized verification type info tag: " + tag);
-        }
-    }
-
-    private StackMapTableAttribute parseStackMapTableAttribute(Symbol<Name> name) {
-        int entryCount = stream.readU2();
-        StackMapFrame[] entries = new StackMapFrame[entryCount];
-        for (int i = 0; i < entryCount; i++) {
-            entries[i] = parseStackMapFrame();
-        }
-        return new StackMapTableAttribute(name, entries);
     }
 
     private CodeAttribute parseCodeAttribute(Symbol<Name> name) {
@@ -1319,16 +1430,17 @@ public final class ClassfileParser {
         }
 
         byte[] code;
-        try (DebugCloseable codeRead = CODE_READ.scope(context.getTimers())) {
+        try (DebugCloseable codeRead = CODE_READ.scope(env.getTimers())) {
             code = stream.readByteArray(codeLength);
         }
         ExceptionHandler[] entries;
-        try (DebugCloseable handlers = EXCEPTION_HANDLERS.scope(context.getTimers())) {
+        try (DebugCloseable handlers = EXCEPTION_HANDLERS.scope(env.getTimers())) {
             entries = parseExceptionHandlerEntries();
         }
 
         int attributeCount = stream.readU2();
-        final Attribute[] codeAttributes = new Attribute[attributeCount];
+        final Attribute[] codeAttributes = spawnAttributesArray(attributeCount);
+        int totalLocalTableCount = 0;
 
         CommonAttributeParser commonAttributeParser = new CommonAttributeParser(InfoType.Code);
 
@@ -1344,22 +1456,15 @@ public final class ClassfileParser {
             if (attributeName.equals(Name.LineNumberTable)) {
                 codeAttributes[i] = parseLineNumberTable(attributeName);
             } else if (attributeName.equals(Name.LocalVariableTable)) {
-                codeAttributes[i] = parseLocalVariableAttribute(attributeName);
+                codeAttributes[i] = parseLocalVariableAttribute(attributeName, codeLength, maxLocals);
+                totalLocalTableCount++;
             } else if (attributeName.equals(Name.LocalVariableTypeTable)) {
-                codeAttributes[i] = parseLocalVariableTypeAttribute(attributeName);
+                codeAttributes[i] = parseLocalVariableTypeAttribute(attributeName, codeLength, maxLocals);
             } else if (attributeName.equals(Name.StackMapTable)) {
                 if (stackMapTable != null) {
                     throw ConstantPool.classFormatError("Duplicate StackMapTable attribute");
                 }
-                codeAttributes[i] = stackMapTable = parseStackMapTableAttribute(attributeName);
-                // GR-19627 HotSpot's ad-hoc behavior: Truncated StackMapTable attributes throws
-                // either VerifyError or ClassFormatError only if verified. Here the
-                // attribute is marked for the verifier.
-                int remaining = attributeSize - (stream.getPosition() - startPosition);
-                if (remaining > 0) {
-                    stream.skip(remaining);
-                    stackMapTable.setTruncated();
-                }
+                codeAttributes[i] = stackMapTable = parseStackMapTableAttribute(attributeName, attributeSize);
             } else {
                 Attribute attr = commonAttributeParser.parseCommonAttribute(attributeName, attributeSize);
                 // stream.skip(attributeSize);
@@ -1371,11 +1476,49 @@ public final class ClassfileParser {
             }
         }
 
+        if (totalLocalTableCount > 0) {
+            validateLocalTables(codeAttributes);
+        }
+
         return new CodeAttribute(name, maxStack, maxLocals, code, entries, codeAttributes, majorVersion);
+    }
+
+    private void validateLocalTables(Attribute[] codeAttributes) {
+        if (getMajorVersion() < JAVA_1_5_VERSION) {
+            return;
+        }
+        EconomicMap<Local, Boolean> table = EconomicMap.create(Local.localEquivalence);
+        ArrayList<LocalVariableTable> typeTables = new ArrayList<>();
+        for (Attribute attr : codeAttributes) {
+            if (attr.getName() == Name.LocalVariableTable) {
+                LocalVariableTable localTable = (LocalVariableTable) attr;
+                for (Local local : localTable.getLocals()) {
+                    if (table.put(local, false) != null) {
+                        throw ConstantPool.classFormatError("Duplicate local in local variable table: " + local);
+                    }
+                }
+            } else if (attr.getName() == Name.LocalVariableTypeTable) {
+                typeTables.add((LocalVariableTable) attr);
+            }
+        }
+        for (LocalVariableTable typeTable : typeTables) {
+            for (Local local : typeTable.getLocals()) {
+                Boolean present = table.put(local, true);
+                if (present == null) {
+                    throw ConstantPool.classFormatError("Local in local variable type table does not match any local variable table entry: " + local);
+                }
+                if (present) {
+                    throw ConstantPool.classFormatError("Duplicate local in local variable type table: " + local);
+                }
+            }
+        }
     }
 
     private ExceptionHandler[] parseExceptionHandlerEntries() {
         int count = stream.readU2();
+        if (count == 0) {
+            return ExceptionHandler.EMPTY_ARRAY;
+        }
         ExceptionHandler[] entries = new ExceptionHandler[count];
         for (int i = 0; i < count; i++) {
             int startPc = stream.readU2();
@@ -1384,7 +1527,7 @@ public final class ClassfileParser {
             int catchTypeIndex = stream.readU2();
             Symbol<Type> catchType = null;
             if (catchTypeIndex != 0) {
-                catchType = context.getTypes().fromName(pool.classAt(catchTypeIndex).getName(pool));
+                catchType = env.getTypes().fromName(pool.classAt(catchTypeIndex).getName(pool));
             }
             entries[i] = new ExceptionHandler(startPc, endPc, handlerPc, catchTypeIndex, catchType);
         }
@@ -1443,7 +1586,7 @@ public final class ClassfileParser {
         }
 
         final int attributeCount = stream.readU2();
-        final Attribute[] fieldAttributes = new Attribute[attributeCount];
+        final Attribute[] fieldAttributes = spawnAttributesArray(attributeCount);
 
         ConstantValueAttribute constantValue = null;
         CommonAttributeParser commonAttributeParser = new CommonAttributeParser(InfoType.Field);
@@ -1551,7 +1694,7 @@ public final class ClassfileParser {
             }
             return null;
         }
-        return context.getTypes().fromName(pool.classAt(index).getName(pool));
+        return env.getTypes().fromName(pool.classAt(index).getName(pool));
     }
 
     @SuppressWarnings({"unchecked", "rawtypes"})
@@ -1564,7 +1707,7 @@ public final class ClassfileParser {
         for (int i = 0; i < interfaceCount; i++) {
             int interfaceIndex = stream.readU2();
             Symbol<Name> interfaceName = pool.classAt(interfaceIndex).getName(pool);
-            Symbol<Type> interfaceType = context.getTypes().fromName(interfaceName);
+            Symbol<Type> interfaceType = env.getTypes().fromName(interfaceName);
             if (interfaceType == null) {
                 throw ConstantPool.classFormatError(classType + " contains invalid superinterface name: " + interfaceName);
             }
@@ -1573,11 +1716,18 @@ public final class ClassfileParser {
             }
             interfaces[i] = interfaceType;
         }
+        // Check for duplicate interfaces in the interface array.
+        Set<Symbol<Type>> present = new HashSet<>(interfaces.length);
+        for (Symbol<Type> t : interfaces) {
+            if (!present.add(t)) {
+                throw ConstantPool.classFormatError("Duplicate interface name in classfile: " + t);
+            }
+        }
         return interfaces;
     }
 
     int getMajorVersion() {
-        assert majorVersion != 0;
+        assert majorVersion != -1;
         return majorVersion;
     }
 
