@@ -30,6 +30,7 @@ import java.util.IdentityHashMap;
 import java.util.Map;
 import java.util.function.Function;
 
+import org.graalvm.collections.EconomicMap;
 import org.graalvm.compiler.core.common.FieldIntrospection;
 import org.graalvm.compiler.core.common.Fields;
 import org.graalvm.compiler.graph.Edges;
@@ -39,12 +40,13 @@ import org.graalvm.compiler.lir.CompositeValue;
 import org.graalvm.compiler.lir.CompositeValueClass;
 import org.graalvm.compiler.lir.LIRInstruction;
 import org.graalvm.compiler.lir.LIRInstructionClass;
-import org.graalvm.compiler.serviceprovider.GraalUnsafeAccess;
 import org.graalvm.nativeimage.ImageSingletons;
 import org.graalvm.nativeimage.hosted.Feature;
 
 import com.oracle.graal.pointsto.api.DefaultUnsafePartition;
-import com.oracle.svm.core.annotate.RecomputeFieldValue;
+import com.oracle.graal.pointsto.meta.AnalysisField;
+import com.oracle.svm.core.BuildPhaseProvider;
+import com.oracle.svm.core.fieldvaluetransformer.FieldValueTransformerWithAvailability;
 import com.oracle.svm.core.graal.GraalEdgeUnsafePartition;
 import com.oracle.svm.core.util.VMError;
 import com.oracle.svm.graal.GraalSupport;
@@ -55,9 +57,7 @@ import com.oracle.svm.hosted.FeatureImpl.DuringSetupAccessImpl;
 import com.oracle.svm.hosted.meta.HostedMetaAccess;
 import com.oracle.svm.util.UnsafePartitionKind;
 
-import jdk.vm.ci.meta.MetaAccessProvider;
-import jdk.vm.ci.meta.ResolvedJavaField;
-import sun.misc.Unsafe;
+import jdk.internal.misc.Unsafe;
 
 /**
  * Graal uses unsafe memory accesses to access {@link Node}s and {@link LIRInstruction}s. The
@@ -68,11 +68,14 @@ import sun.misc.Unsafe;
  */
 public class FieldsOffsetsFeature implements Feature {
 
-    private static final Unsafe UNSAFE = GraalUnsafeAccess.getUnsafe();
-
-    abstract static class IterationMaskRecomputation implements RecomputeFieldValue.CustomFieldValueComputer {
+    abstract static class IterationMaskRecomputation implements FieldValueTransformerWithAvailability {
         @Override
-        public Object compute(MetaAccessProvider metaAccess, ResolvedJavaField original, ResolvedJavaField annotated, Object receiver) {
+        public ValueAvailability valueAvailability() {
+            return ValueAvailability.AfterAnalysis;
+        }
+
+        @Override
+        public Object transform(Object receiver, Object originalValue) {
             Edges edges = getEdges((NodeClass<?>) receiver);
             FieldsOffsetsReplacement replacement = FieldsOffsetsFeature.getReplacements().get(edges.getOffsets());
             assert replacement.fields == edges;
@@ -156,6 +159,9 @@ public class FieldsOffsetsFeature implements Feature {
     /* Invoked once for every class that is reachable in the native image. */
     private static void classReachabilityListener(DuringAnalysisAccess a, Class<?> newlyReachableClass) {
         DuringAnalysisAccessImpl access = (DuringAnalysisAccessImpl) a;
+        if (BuildPhaseProvider.isAnalysisFinished()) {
+            throw VMError.shouldNotReachHere("New class reachable after analysis: " + newlyReachableClass);
+        }
 
         if (Node.class.isAssignableFrom(newlyReachableClass) && newlyReachableClass != Node.class) {
             FieldsOffsetsFeature.<NodeClass<?>> registerClass(newlyReachableClass, GraalSupport.get().nodeClasses, NodeClass::get, false, access);
@@ -168,8 +174,8 @@ public class FieldsOffsetsFeature implements Feature {
         }
     }
 
-    private static <R extends FieldIntrospection<?>> void registerClass(Class<?> clazz, Map<Class<?>, R> registry, Function<Class<?>, R> lookup, boolean excludeAbstract,
-                    DuringAnalysisAccessImpl access) {
+    private static <R extends FieldIntrospection<?>> void registerClass(Class<?> clazz, EconomicMap<Class<?>, R> registry,
+                    Function<Class<?>, R> lookup, boolean excludeAbstract, DuringAnalysisAccessImpl access) {
         assert !registry.containsKey(clazz);
 
         if (!excludeAbstract || !Modifier.isAbstract(clazz.getModifiers())) {
@@ -186,29 +192,31 @@ public class FieldsOffsetsFeature implements Feature {
             NodeClass<?> nodeClass = (NodeClass<?>) introspection;
 
             Fields dataFields = nodeClass.getData();
-            registerFields(dataFields, DefaultUnsafePartition.get(), config);
+            registerFields(dataFields, DefaultUnsafePartition.get(), config, "Graal node data field");
 
             Fields inputEdges = nodeClass.getInputEdges();
-            registerFields(inputEdges, GraalEdgeUnsafePartition.get(), config);
+            registerFields(inputEdges, GraalEdgeUnsafePartition.get(), config, "Graal node input edge");
 
             Fields successorEdges = nodeClass.getSuccessorEdges();
-            registerFields(successorEdges, GraalEdgeUnsafePartition.get(), config);
+            registerFields(successorEdges, GraalEdgeUnsafePartition.get(), config, "Graal node successor edge");
 
             /* Ensure field shortName is initialized, so that the instance is immutable. */
             nodeClass.shortName();
 
         } else {
             for (Fields fields : introspection.getAllFields()) {
-                registerFields(fields, DefaultUnsafePartition.get(), config);
+                registerFields(fields, DefaultUnsafePartition.get(), config, "Graal field");
             }
         }
     }
 
-    private static void registerFields(Fields fields, UnsafePartitionKind partitionKind, BeforeAnalysisAccessImpl config) {
+    private static void registerFields(Fields fields, UnsafePartitionKind partitionKind, BeforeAnalysisAccessImpl config, Object reason) {
         getReplacements().put(fields.getOffsets(), new FieldsOffsetsReplacement(fields));
 
         for (int i = 0; i < fields.getCount(); i++) {
-            config.registerAsUnsafeAccessed(config.getMetaAccess().lookupJavaField(findField(fields, i)), partitionKind);
+            AnalysisField aField = config.getMetaAccess().lookupJavaField(findField(fields, i));
+            aField.getType().registerAsReachable(aField);
+            config.registerAsUnsafeAccessed(aField, partitionKind, reason);
         }
     }
 
@@ -230,7 +238,7 @@ public class FieldsOffsetsFeature implements Feature {
             long[] newOffsets = new long[fields.getCount()];
             for (int i = 0; i < newOffsets.length; i++) {
                 Field field = findField(fields, i);
-                assert UNSAFE.objectFieldOffset(field) == fields.getOffsets()[i];
+                assert Unsafe.getUnsafe().objectFieldOffset(field) == fields.getOffsets()[i];
                 newOffsets[i] = hMetaAccess.lookupJavaField(field).getLocation();
             }
             replacement.newOffsets = newOffsets;
@@ -247,7 +255,7 @@ public class FieldsOffsetsFeature implements Feature {
 
     @Override
     public void afterCompilation(AfterCompilationAccess access) {
-        access.registerAsImmutable(GraalSupport.get().nodeClasses.values(), o -> true);
-        access.registerAsImmutable(GraalSupport.get().instructionClasses.values(), o -> true);
+        access.registerAsImmutable(GraalSupport.get().nodeClasses.getValues(), o -> true);
+        access.registerAsImmutable(GraalSupport.get().instructionClasses.getValues(), o -> true);
     }
 }
