@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2017, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * The Universal Permissive License (UPL), Version 1.0
@@ -40,13 +40,6 @@
  */
 package com.oracle.truffle.tck.tests;
 
-import java.io.IOException;
-import java.util.AbstractMap;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Objects;
-import java.util.function.Function;
-
 import org.graalvm.polyglot.PolyglotException;
 import org.graalvm.polyglot.Value;
 import org.graalvm.polyglot.tck.LanguageProvider;
@@ -57,6 +50,11 @@ import org.junit.BeforeClass;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
+
+import java.util.AbstractMap;
+import java.util.Collection;
+import java.util.List;
+import java.util.Objects;
 
 @RunWith(Parameterized.class)
 public class IdentityFunctionTest {
@@ -71,18 +69,13 @@ public class IdentityFunctionTest {
         final Collection<? extends TestRun> testRuns = TestUtil.createTestRuns(
                         TestUtil.getRequiredLanguages(context),
                         TestUtil.getRequiredValueLanguages(context),
-                        new Function<String, Collection<? extends Snippet>>() {
-                            @Override
-                            public Collection<? extends Snippet> apply(String lang) {
-                                return Arrays.asList(createIdentitySnippet(lang));
-                            }
-                        },
-                        new Function<String, Collection<? extends Snippet>>() {
-                            @Override
-                            public Collection<? extends Snippet> apply(String lang) {
-                                return context.getValueConstructors(null, lang);
-                            }
-                        });
+                        lang -> List.of(createIdentitySnippet(lang)),
+                        lang -> context.getValueConstructors(null, lang));
+        if (testRuns.isEmpty()) {
+            // BeforeClass and AfterClass annotated methods are not called when there are no tests
+            // to run. But we need to free TestContext.
+            afterClass();
+        }
         return testRuns;
     }
 
@@ -97,7 +90,7 @@ public class IdentityFunctionTest {
     }
 
     @AfterClass
-    public static void afterClass() throws IOException {
+    public static void afterClass() {
         context.close();
         context = null;
     }
@@ -111,13 +104,22 @@ public class IdentityFunctionTest {
     public void testIdentityFunction() {
         Assume.assumeThat(testRun, TEST_RESULT_MATCHER);
         boolean success = false;
+        Value result = null;
+        PolyglotException ex = null;
         try {
             try {
-                final Value result = testRun.getSnippet().getExecutableValue().execute(testRun.getActualParameters().toArray());
-                TestUtil.validateResult(testRun, result, null, true);
+                result = testRun.getSnippet().getExecutableValue().execute(testRun.getActualParameters().toArray());
+            } catch (IllegalArgumentException e) {
+                ex = context.getContext().asValue(e).as(PolyglotException.class);
+                TestUtil.validateResult(testRun, ex);
                 success = true;
-            } catch (PolyglotException pe) {
-                TestUtil.validateResult(testRun, null, pe, true);
+            } catch (PolyglotException e) {
+                ex = e;
+                TestUtil.validateResult(testRun, e);
+                success = true;
+            }
+            if (result != null) {
+                TestUtil.validateResult(testRun, result, true);
                 success = true;
             }
         } catch (PolyglotException | AssertionError e) {
@@ -125,7 +127,7 @@ public class IdentityFunctionTest {
                             TestUtil.formatErrorMessage(
                                             "Unexpected Exception: " + e.getMessage(),
                                             testRun,
-                                            context),
+                                            context, result, ex),
                             e);
         } finally {
             TEST_RESULT_MATCHER.accept(new AbstractMap.SimpleImmutableEntry<>(testRun, success));
